; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kgssapi/extr_gss_impl.c_kgss_install_mech.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kgssapi/extr_gss_impl.c_kgss_install_mech.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kobj_class = type { i32 }
%struct.kgss_mech = type { i8*, %struct.kobj_class*, i32 }

@M_GSSAPI = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@kgss_mechs = common dso_local global i32 0, align 4
@km_link = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kgss_install_mech(i32 %0, i8* %1, %struct.kobj_class* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.kobj_class*, align 8
  %7 = alloca %struct.kgss_mech*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store %struct.kobj_class* %2, %struct.kobj_class** %6, align 8
  %8 = load i32, i32* @M_GSSAPI, align 4
  %9 = load i32, i32* @M_WAITOK, align 4
  %10 = call %struct.kgss_mech* @malloc(i32 24, i32 %8, i32 %9)
  store %struct.kgss_mech* %10, %struct.kgss_mech** %7, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.kgss_mech*, %struct.kgss_mech** %7, align 8
  %13 = getelementptr inbounds %struct.kgss_mech, %struct.kgss_mech* %12, i32 0, i32 2
  store i32 %11, i32* %13, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load %struct.kgss_mech*, %struct.kgss_mech** %7, align 8
  %16 = getelementptr inbounds %struct.kgss_mech, %struct.kgss_mech* %15, i32 0, i32 0
  store i8* %14, i8** %16, align 8
  %17 = load %struct.kobj_class*, %struct.kobj_class** %6, align 8
  %18 = load %struct.kgss_mech*, %struct.kgss_mech** %7, align 8
  %19 = getelementptr inbounds %struct.kgss_mech, %struct.kgss_mech* %18, i32 0, i32 1
  store %struct.kobj_class* %17, %struct.kobj_class** %19, align 8
  %20 = load %struct.kgss_mech*, %struct.kgss_mech** %7, align 8
  %21 = load i32, i32* @km_link, align 4
  %22 = call i32 @LIST_INSERT_HEAD(i32* @kgss_mechs, %struct.kgss_mech* %20, i32 %21)
  ret void
}

declare dso_local %struct.kgss_mech* @malloc(i32, i32, i32) #1

declare dso_local i32 @LIST_INSERT_HEAD(i32*, %struct.kgss_mech*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
